--- a/epic-launcher.html
+++ b/epic-launcher.html
@@ -11,18 +11,18 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background-color: #121212;
-      color: #fff;
+      background-color: #f0f0f0; /* light background */
+      color: #333; /* dark text */
       font-family: Arial, sans-serif;
     }
     .logo {
-      width: 100px;
+      width: 120px;
       margin-bottom: 30px;
     }
     .loading-bar {
       width: 200px;
       height: 6px;
-      background: #333;
+      background: #ccc; /* lighter gray bar background */
       border-radius: 3px;
       overflow: hidden;
       position: relative;
@@ -30,7 +30,7 @@
     .loading-fill {
       height: 100%;
       width: 0%;
-      background: #fff;
+      background: #333; /* dark fill */
       border-radius: 3px;
       animation: load 2s infinite;
     }
@@ -41,7 +41,7 @@
     }
     a {
       margin-top: 20px;
-      color: #00aaff;
+      color: #333;
       text-decoration: none;
       font-size: 14px;
     }
@@ -57,7 +57,7 @@
   </script>
 </head>
 <body>
-  <img class="logo" src="https://cdn2.unrealengine.com/epic-games-white-89f4c442c6ae.png" alt="Epic Games Logo">
+  <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/3/31/Epic_Games_logo.svg" alt="Epic Games Logo">
   <div class="loading-bar">
     <div class="loading-fill"></div>
   </div>
