--- a/epic-launcher.html
+++ b/epic-launcher.html
@@ -17,8 +17,13 @@
     }
     .logo {
       width: 120px;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
       filter: invert(1); /* make the black SVG appear white */
+    }
+    .title {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 30px;
     }
     .loading-bar {
       width: 200px;
@@ -43,11 +48,12 @@
     a {
       margin-top: 20px;
       color: #aaa;
-      text-decoration: none;
+      text-decoration: none; /* no underline */
       font-size: 14px;
     }
     a:hover {
-      text-decoration: underline;
+      text-decoration: none; /* keep no underline even on hover */
+      color: #fff; /* brighten text when hovered */
     }
   </style>
   <script>
@@ -59,6 +65,7 @@
 </head>
 <body>
   <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/3/31/Epic_Games_logo.svg" alt="Epic Games Logo">
+  <div class="title">Epic Launcher</div>
   <div class="loading-bar">
     <div class="loading-fill"></div>
   </div>
