--- a/epic-launcher.html
+++ b/epic-launcher.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Epic Games Launcher</title>
 
-  <!-- Use the uploaded favicon.png in the repo root -->
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="shortcut icon" href="favicon.png">
 
@@ -59,6 +59,8 @@
       text-align:center;
       line-height:1.6;
     }
+
+    /* Main fallback link */
     .links a {
       color: #aaa;
       text-decoration: none; /* remove underline */
@@ -67,7 +69,15 @@
     }
     .links a:hover {
       color: #fff;
-      text-decoration: none; /* never underline */
+    }
+
+    /* Secondary download link */
+    .links a.download {
+      font-size: 12px;
+      color: #666; /* lighter gray */
+    }
+    .links a.download:hover {
+      color: #aaa; /* brighten slightly on hover */
     }
 
     /* small responsive tweak */
@@ -80,9 +90,7 @@
   <script>
     // Attempt to open the launcher immediately
     function tryLaunch() {
-      // navigate to the custom protocol
       window.location.href = "com.epicgames.launcher://";
-      // also attempt opening via iframe (older fallbacks, may be blocked by some browsers)
       try {
         var ifr = document.createElement('iframe');
         ifr.style.display = 'none';
@@ -93,13 +101,11 @@
     }
 
     window.addEventListener('load', function(){
-      // Give the page a tiny delay so user sees the animation, then try to launch
       setTimeout(tryLaunch, 250);
     });
   </script>
 </head>
 <body>
-  <!-- Wikimedia SVG (inverted to white via CSS filter) -->
   <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/3/31/Epic_Games_logo.svg" alt="Epic Games Logo">
 
   <div class="loading-bar" aria-hidden="true">
@@ -108,7 +114,7 @@
 
   <div class="links" role="contentinfo" aria-label="Launcher links">
     <a href="com.epicgames.launcher://" id="open-link">Click here if it doesn’t launch automatically</a>
-    <a href="https://store.epicgames.com/en-US/download" target="_blank" rel="noopener noreferrer">Download Epic Games Launcher</a>
+    <a href="https://store.epicgames.com/en-US/download" target="_blank" rel="noopener noreferrer" class="download">Download Epic Games Launcher</a>
   </div>
 </body>
 </html>
