--- a/launcher.html
+++ b/launcher.html
@@ -115,7 +115,7 @@
           : `https://store.epicgames.com/${locale}/`;
 
         fallback.innerHTML = 
-          `Didn't launch? <a href="com.epicgames.launcher://">Click to open launcher</a><br>`;
+          `Didn't launch? <a href="com.epicgames.launcher://">Click to open</a><br>`;
 
         fallback.style.opacity = '1';
       }, 8000);
